# hagoromo

./: Cargo.toml  LICENSE  README.md
examples/: fretboard.rs  hilbert.rs  logo.rs  pentaflake.rs  sierpinski.rs  square_limit.rs  star.rs  tangent.rs  tiling.rs
src/: backend.rs  combinators.rs  diagram.rs  envelope.rs  lib.rs  primitives.rs  spline.rs  style.rs  trail.rs
src/backends/: mod.rs  svg.rs
