[package]
name = "hagoromo"
license = "MIT"
description = "Declarative vector graphics DSL inspired by the Haskell diagrams package."
version = "0.3.0"
edition = "2021"

[features]
serde = ["dep:serde", "kurbo/serde"]

[dependencies]
kurbo = "0.11"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"
